--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -8,6 +8,8 @@ encoding//Debug/source/subdir_vars.mk=UTF-8
 encoding//Debug/sources.mk=UTF-8
 encoding//Debug/subdir_rules.mk=UTF-8
 encoding//Debug/subdir_vars.mk=UTF-8
+encoding//Release/HALCoGen/source/subdir_rules.mk=UTF-8
+encoding//Release/HALCoGen/source/subdir_vars.mk=UTF-8
 encoding//Release/Linker/subdir_rules.mk=UTF-8
 encoding//Release/Linker/subdir_vars.mk=UTF-8
 encoding//Release/makefile=UTF-8
